# ZVSAssistantDesktop

./: .gitignore  README.md  electron-builder.json5  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.ts
core/: Cargo.toml
core/src/: lib.rs  main.rs  napi_chat.rs  napi_ollama.rs
core/src/application/: ports.rs
core/src/application/services/: chat_core_service.rs  mod.rs  token_usage_service.rs  tool_registry_service.rs
core/src/application/use_cases/: chat.rs  tools.rs
core/src/domain/: chat.rs  error.rs
core/src/tools/: builtin_tools.rs  executor.rs  mod.rs
core/src/tools/packs/: base_pack.rs  browser_pack.rs  communication_pack.rs  data_pack.rs  filesystem_pack.rs  mod.rs  scenario_builder_pack.rs  studying_pack.rs  terminal_pack.rs
dist-electron/: main.js  preload.mjs
electron/: config.ts  main.ts  namespaces.ts  paths.ts  preload.ts
electron/errors/: errorPattern.ts
electron/ipc/: icpChatPack.ts  icpProfilePack.ts  icpWorkspacePack.ts  index.ts  ipcAgentsPack.ts  ipcChatPack.ts  ipcCommunicationsPack.ts  ipcCorePack.ts  ipcDialogsPack.ts  ipcJobsPack.ts  ipcProfilePack.ts  ipcProjectsPack.ts  ipcScenariosPack.ts  ipcSecretsPack.ts  ipcStoragePack.ts  ipcSystemPack.ts  ipcUtils.ts  ipcWorkspacePack.ts
electron/models/: agent.ts  chat.ts  dialog.ts  index.ts  job.ts  profile.ts  secret.ts  storage.ts  tool.ts  user.ts
electron/repositories/: AgentsRepository.ts  DialogRepository.ts  JobRepository.ts  (+3 more)
src/: App.tsx  index.css  main.tsx  router.ts  routes.ts  vite-env.d.ts
tests/: chat_generation_test.ts
(+330 files in other folders)
